Fix loading of incorrect split prices for present "add/remove shares" transactions

BUG:498356
BUG:498401
FIXED-IN:5.2